# vep-noodles

./: README.md  read.py
example/: grch38.vcf
vep-cli/: Cargo.toml
vep-cli/src/: main.rs
vep-core/: Cargo.toml
vep-core/.cargo/: config.toml
vep-core/src/: lib.rs  main.rs  utils.rs  vep.rs
vep-python/: pyproject.toml  test_wasm.sh  update_wasm.sh  update_wasm_debug.sh  vep-python.py
vep-tui/: Cargo.toml
vep-wit/: Cargo.toml
vep-wit/src/: bindings.rs  lib.rs
vep-wit/wit/: world.wit
